fix: Poor color contrast on Reddit night mode

--- a/src/content_scripts/index.css
+++ b/src/content_scripts/index.css
@@ -39,3 +39,18 @@
 	margin: 0 !important;
 	margin-left: 10px !important;
 }
+
+/* Undoes background on operators on default Prism theme. */
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+	background: none !important;
+}
+
+/* Fixed hard-to-read body text when Reddit is set to night mode. */
+code[class*="language-"],
+pre[class*="language-"] {
+	color: black !important;
+}
